--- a/res/xml/inter.xml
+++ b/res/xml/inter.xml
@@ -13,4 +13,16 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- OmniStyle -->
+    <Preference
+         android:key="omni_theme_select_activity"
+         android:title="@string/theme_select_title"
+         android:icon="@drawable/ic_themes"
+         android:summary="@string/theme_select_summary"
+         android:persistent="false" >
+         <intent android:action="android.intent.action.MAIN"
+                 android:targetPackage="org.omnirom.omnistyle"
+                 android:targetClass="org.omnirom.omnistyle.BrowseThemesActivity" />
+    </Preference>
+
 </PreferenceScreen>
