Theme the basics
Signed-off-by: Ovenoboyo <ovenoboyo@gmail.com>

--- a/res/drawable/ripple_thin.xml
+++ b/res/drawable/ripple_thin.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@android:color/black">     <!-- ripple color -->
+    android:color="@color/text_primary">     <!-- ripple color -->
 
     <!-- for Button -->
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="20dp" />
-            <solid android:color="@*android:color/white"/>
+            <solid android:color="@color/button_bg"/>
             <stroke
-                android:color="#B1BCBE"
+                android:color="@color/accent"
                 android:width="1dp" />
         </shape>
     </item>
