Shell: Implement battery percent styles (2/2)
Signed-off-by: Dixzz <vishusatyam36@gmail.com>

--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -13,4 +13,8 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <Preference
+            android:key="battery_settings"
+            android:title="@string/battery_style_category_title"
+            android:fragment="com.pearl.shell.fragments.StatusBarBattery" />
 </PreferenceScreen>
