--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -309,7 +309,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@drawable/card5" />
         </RelativeLayout>
 
     </LinearLayout>
