--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -16,5 +16,6 @@
     <Preference
             android:key="battery_settings"
             android:title="@string/battery_style_category_title"
+            android:icon="@drawable/ic_battery_title"
             android:fragment="com.pearl.shell.fragments.StatusBarBattery" />
 </PreferenceScreen>
