Add about us app launch activity

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -284,6 +284,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/about"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="25dp"
