--- a/res/values/shell_strings.xml
+++ b/res/values/shell_strings.xml
@@ -30,4 +30,16 @@
     <!-- Lockscreen battery info indicator  -->
     <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
     <string name="lockscreen_battery_info_summary">Display charger max current and voltage and battery temperature on lockscreen</string>
+
+    <!-- Audio Panel view  -->
+    <string name="audio_panel_view_title">Volume Panel</string>
+    <string name="audio_panel_view_summary">Customize volume panel dialog</string>
+    <string name="audio_panel_view_info">Active volume stream will be displayed on the screen even if disabled here. Volume streams enabled here would be displayed forcefully.</string>
+    <string name="audio_panel_view_media_title">Media</string>
+    <string name="audio_panel_view_ringer_title">Ring</string>
+    <string name="audio_panel_view_notification_title">Notification</string>
+    <string name="audio_panel_view_notification_disabled">Ring and notification volumes are linked</string>
+    <string name="audio_panel_view_alarm_title">Alarm</string>
+    <string name="audio_panel_view_voice_title">Voice</string>
+    <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
 </resources>
