--- a/res/values/shell_strings.xml
+++ b/res/values/shell_strings.xml
@@ -12,6 +12,19 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- cards -->
+    <string name="card1">Status Bar</string>
+    <string name="card2">Lock Screen</string>
+    <string name="card3">Buttons</string>
+    <string name="card4">Interface</string>
+    <string name="card5">Recents</string>
+    <string name="card6">Misc</string>
+
+    <!-- Omani Themes -->
+    <string name="theme_select_title">System themes</string>
+    <string name="omni_theme_select_none">Disabled</string>
+    <string name="theme_select_summary">Theme your system</string>
+
     <!-- Battery percentage -->
     <string name="battery_style_category_title">Battery icon</string>
     <string name="status_bar_battery_percentage_title">Battery percentage</string>
@@ -31,15 +44,16 @@
     <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
     <string name="lockscreen_battery_info_summary">Display charger max current and voltage and battery temperature on lockscreen</string>
 
-    <!-- Audio Panel view  -->
-    <string name="audio_panel_view_title">Volume Panel</string>
-    <string name="audio_panel_view_summary">Customize volume panel dialog</string>
-    <string name="audio_panel_view_info">Active volume stream will be displayed on the screen even if disabled here. Volume streams enabled here would be displayed forcefully.</string>
-    <string name="audio_panel_view_media_title">Media</string>
-    <string name="audio_panel_view_ringer_title">Ring</string>
-    <string name="audio_panel_view_notification_title">Notification</string>
-    <string name="audio_panel_view_notification_disabled">Ring and notification volumes are linked</string>
-    <string name="audio_panel_view_alarm_title">Alarm</string>
-    <string name="audio_panel_view_voice_title">Voice</string>
-    <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
+
+    <!-- Roaming indicator icon -->
+    <string name="roaming_indicator_icon_title">Roaming indicator</string>
+    <string name="roaming_indicator_icon_summary">Roaming indicator in signal icon when in roaming mode</string>
+
+    <!-- Show VoLTE icon on statusbar -->
+    <string name="volte_icon_title">VoLTE icon</string>
+    <string name="volte_icon_summary">Display VoLTE icon (Needs a SystemUI restart to take effect)</string>
+
+    <!-- Volume rocker music control -->
+    <string name="volume_button_music_control_title">Playback control</string>
+    <string name="volume_button_music_control_summary">When the screen is off, long-pressing the volume keys will skip music tracks</string>
 </resources>
