--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -13,4 +13,9 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <com.pearl.shell.preferences.SystemSettingSwitchPreference
+        android:key="volume_button_music_control"
+        android:title="@string/volume_button_music_control_title"
+        android:summary="@string/volume_button_music_control_summary"
+        android:defaultValue="false" />
 </PreferenceScreen>
