--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -19,6 +19,12 @@
             android:icon="@drawable/ic_battery_title"
             android:fragment="com.pearl.shell.fragments.StatusBarBattery" />
 
+    <Preference
+         android:key="clock_settings"
+         android:icon="@drawable/ic_clock"
+         android:title="@string/clock_style_category_title"
+         android:summary="@string/clock_style_category_summary"
+         android:fragment="com.pearl.shell.fragments.ClockSettings" />
 
     <com.pearl.shell.preferences.SystemSettingSwitchPreference
         android:key="roaming_indicator_icon"
