Fully Rebased to last working method [2/3]
Signed-off-by: Dixzz <vishusatyam36@gmail.com>

--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -44,4 +44,17 @@
         android:title="@string/volte_icon_title"
         android:summary="@string/volte_icon_summary"
         android:defaultValue="false"/>
+
+    <PreferenceCategory
+        android:key="weather_lockscreen_key"
+        android:title="@string/weather_title" >
+        <com.pearl.shell.preferences.SystemSettingListPreference
+            android:key="weather_lockscreen_unit"
+            android:dialogTitle="@string/weather_unit"
+            android:title="@string/weather_unit"
+            android:summary="%s"
+            android:entries="@array/weather_unit_entries"
+            android:entryValues="@array/weather_unit_values"
+            android:defaultValue="0" />
+    </PreferenceCategory>
 </PreferenceScreen>
