--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -18,4 +18,39 @@
         android:title="@string/volume_button_music_control_title"
         android:summary="@string/volume_button_music_control_summary"
         android:defaultValue="false" />
+
+    <PreferenceCategory
+        android:title="@string/audio_panel_view">
+
+        <com.pearl.shell.preferences.SystemSettingSwitchPreference
+            android:key="audio_panel_view_media"
+            android:title="@string/audio_panel_view_media_title"
+            android:defaultValue="true"
+            android:enabled="false"/>
+
+        <com.pearl.shell.preferences.SystemSettingSwitchPreference
+            android:key="audio_panel_view_ringer"
+            android:title="@string/audio_panel_view_ringer_title"
+            android:defaultValue="false"/>
+
+        <com.pearl.shell.preferences.SystemSettingSwitchPreference
+            android:key="audio_panel_view_notification"
+            android:title="@string/audio_panel_view_notification_title"
+            android:defaultValue="false"/>
+
+        <com.pearl.shell.preferences.SystemSettingSwitchPreference
+            android:key="audio_panel_view_alarm"
+            android:title="@string/audio_panel_view_alarm_title"
+            android:defaultValue="false"/>
+
+        <com.pearl.shell.preferences.SystemSettingSwitchPreference
+            android:key="audio_panel_view_voice"
+            android:title="@string/audio_panel_view_voice_title"
+            android:defaultValue="false"/>
+
+        <com.pearl.shell.preferences.SystemSettingSwitchPreference
+            android:key="audio_panel_view_bt_sco"
+            android:title="@string/audio_panel_view_bt_sco_title"
+            android:defaultValue="false"/>
+    </PreferenceCategory>    
 </PreferenceScreen>
