--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -114,6 +114,16 @@
         <item>0</item>
     </string-array>
 
+    <!-- Notification ticker -->
+    <string-array name="ticker_animation_mode_entries" translatable="false">
+        <item>@string/ticker_animation_mode_alpha_fade</item>
+        <item>@string/ticker_animation_mode_scroll</item>
+    </string-array>
+    <string-array name="ticker_animation_mode_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- Weather -->
     <string-array name="weather_unit_entries" translatable="false">
         <item>@string/weather_unit_metric</item>
