--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -20,6 +20,11 @@
             android:fragment="com.pearl.shell.fragments.StatusBarBattery" />
 
     <Preference
+        android:key="statusbar_ticker"
+        android:title="@string/status_bar_ticker_title"
+        android:fragment="com.pearl.shell.fragments.Ticker" />
+
+    <Preference
          android:key="clock_settings"
          android:icon="@drawable/ic_clock"
          android:title="@string/clock_style_category_title"
