--- a/res/xml/ticker.xml
+++ b/res/xml/ticker.xml
@@ -20,7 +20,7 @@
         android:key="statusbar_ticker"
         android:title="@string/status_bar_ticker_title">
 
-   <com.pearl.shell.preference.SystemSettingSwitchPreference
+   <com.pearl.shell.preferences.SystemSettingSwitchPreference
             android:key="status_bar_show_ticker"
             android:title="@string/status_bar_show_ticker_title"
             android:summary="@string/status_bar_show_ticker_summary"
@@ -34,7 +34,7 @@
             android:defaultValue="0"
             android:dependency="status_bar_show_ticker" />
 
-    <com.pearl.shell.preference.CustomSeekBarPreference
+    <com.pearl.shell.preferences.CustomSeekBarPreference
             android:key="status_bar_ticker_tick_duration"
             android:title="@string/ticker_tick_duration_title"
             android:min="500"
