HeadsUp: Stop showing notifications when selected applications on to [2/2]
Thanks to Decad3nce for idea and code
And credits to old CM's team

--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -26,11 +26,17 @@
         android:title="@string/status_bar_ticker_title"
         android:fragment="com.pearl.shell.fragments.Ticker" />
 
+        <!-- Heads Up -->
+    <Preference
+        android:key="heads_up_notifications"
+        android:title="@string/heads_up_notifications"
+        android:fragment="com.pearl.shell.fragments.HeadsUpSettings" />
+
         <!-- Quick Settings panel -->
     <Preference
             android:key="quicksettings_category"
             android:title="@string/quicksettings_title"
-            android:fragment="com.pearl.shell.fragments.QuickSettings"
+            android:fragment="com.pearl.shell.fragments.QuickSettings"/>
 
     <Preference
          android:key="clock_settings"
