--- a/res/xml/recents.xml
+++ b/res/xml/recents.xml
@@ -11,6 +11,29 @@
      limitations under the License.
 -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:title="@string/recents_title"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+
+    <com.pearl.shell.preferences.SystemSettingSwitchPreference
+        android:key="show_clear_all_recents"
+        android:title="@string/show_clear_all_recents_button_title"
+        android:summary="@string/show_clear_all_recents_button_summary"
+        android:defaultValue="true" />
+
+    <ListPreference
+        android:key="recents_clear_all_location"
+        android:title="@string/recents_clear_all_location_title"
+        android:entries="@array/recents_clear_all_location_entries"
+        android:entryValues="@array/recents_clear_all_location_values"
+        android:defaultValue="3"
+        android:dependency="show_clear_all_recents" />
+
+    <com.pearl.shell.preferences.SystemSettingSwitchPreference
+            android:key="systemui_recents_mem_display" 
+            android:title="@string/systemui_recents_mem_display_title" 
+            android:summary="@string/systemui_recents_mem_display_summary" 
+            android:defaultValue="false" /> 
 
 </PreferenceScreen>
